add to read me and renamed modules

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-module_18/data
-module_13/data
-module_12/data
-module_11/data
+stats_and_prob/data
+SQL/data
+experiment_design_AB_test/data
+data_viz_and_explor/data
+linear_regression/data
+
 **/.DS_Store
 ./elevator_pitch_ds.mov
