--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ experiment_design_AB_test/data
 data_viz_and_explor/data
 linear_regression/data
 random_forrest/data
+SVM/data
 
 **/.DS_Store
 ./elevator_pitch_ds.mov
