add tsne and vector embedding

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ random_forrest/data
 SVM/data
 capstone_3_supervised_learning/data
 neural_networks/data
+capstone_4_unsupervised_learning/data
 
 **/.DS_Store
 ./elevator_pitch_ds.mov
